feat: kafka consumer completed, consumes messages